--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -224,14 +224,14 @@
         <div class="box">
             <a href="/option3" class="box-link">
                 <img src="static/box3.jpg" alt="Option 3" class="box-image">
-                <h2>Tinder AI Photo</h2>
+                <h2>Random Photo</h2>
                 <p>Choose the best photo</p>
             </a>
         </div>
         <div class="box">
             <a href="/option4" class="box-link">
                 <img src="static/box4.png" alt="Option 4" class="box-image">
-                <h2>Tinder Chat AI</h2>
+                <h2>Chat AI</h2>
                 <p>Review your chat</p>
             </a>
         </div>
@@ -239,7 +239,7 @@
             <a href="/option5" class="box-link">
                 <img src="static/box3.jpg" alt="Option 5" class="box-image">
                 <h2>AI Photo Check</h2>
-                <p>Best Profil Photo</p>
+                <p>Best Profile Photo</p>
             </a>
         </div>
     </div>
