--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -222,10 +222,24 @@
             </a>
         </div> -->
         <div class="box">
+            <a href="/option5" class="box-link">
+                <img src="static/box3.jpg" alt="Option 5" class="box-image">
+                <h2>Tinder Photo Ultra</h2>
+                <p>Best Profile Photo with face, age and emotion verification, including AI suggestions for your photo improvement</p>
+            </a>
+        </div>
+        <div class="box">
+            <a href="/option5" class="box-link">
+                <img src="static/box3.jpg" alt="Option 5" class="box-image">
+                <h2>Tinder Photo Premium</h2>
+                <p>Best Profile Photo with face verification</p>
+            </a>
+        </div>
+        <div class="box">
             <a href="/option3" class="box-link">
                 <img src="static/box3.jpg" alt="Option 3" class="box-image">
-                <h2>Random Photo</h2>
-                <p>Choose the best photo</p>
+                <h2>Tinder Photo Basic</h2>
+                <p>Choose the best photo for your profile</p>
             </a>
         </div>
         <div class="box">
@@ -235,13 +249,8 @@
                 <p>Review your chat</p>
             </a>
         </div>
-        <div class="box">
-            <a href="/option5" class="box-link">
-                <img src="static/box3.jpg" alt="Option 5" class="box-image">
-                <h2>AI Photo Check</h2>
-                <p>Best Profile Photo</p>
-            </a>
-        </div>
+       
+        
     </div>
     <div class="page-views">
         <p>Total Page Views: {{ views }}</p>
