--- a/templates/option1.html
+++ b/templates/option1.html
@@ -29,7 +29,7 @@ function toggleExpand(id) {
         <div id="title">
             <div class="image-container">
                 <a href="/" class="image-link">
-                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
                 </a>
             </div>
 
