--- a/templates/option5.html
+++ b/templates/option5.html
@@ -394,13 +394,15 @@
         <div id="title">
             <div class="image-container">
                 <a href="/" class="image-link">
-                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
                 </a>
             </div>
 
+            <!-- Login Button with text and image -->
+            
             <div class="image-container">
                 <a href="/login" class="login-btn">
-                    <img src="static/icon-profile.png" alt="Login" class="login-image">
+                    <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
                     Login
                 </a>
             </div>
