--- a/templates/chat1.html
+++ b/templates/chat1.html
@@ -232,22 +232,22 @@
 
 <body>
     <header>
-       <div id="title">
-        <div class="image-container">
-            <a href="/" class="image-link">
-                <img src="static/box3.jpg" alt="Image 1" class="logo1">
-            </a>
-        </div>
+        <div id="title">
+            <div class="image-container">
+                <a href="/" class="image-link">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
+                </a>
+            </div>
 
-        <!-- Login Button with text and image -->
-         
-        <div class="image-container">
-            <a href="/login" class="login-btn">
-                <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
-                Login
-            </a>
+            <!-- Login Button with text and image -->
+            
+            <div class="image-container">
+                <a href="/login" class="login-btn">
+                    <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
+                    Login
+                </a>
+            </div>
         </div>
-    </div>
     </header>
 
     <!-- Updated Chat Section -->
