--- a/templates/chat3.html
+++ b/templates/chat3.html
@@ -235,12 +235,16 @@
         <div id="title">
             <div class="image-container">
                 <a href="/" class="image-link">
-                    <img src="static/logo.png" alt="Home Logo" class="logo1">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
                 </a>
             </div>
+
+            <!-- Login Button with text and image -->
+            
             <div class="image-container">
-                <a href="/login" class="image-link">
-                    <img src="static/icon-profile.png" alt="Profile Icon" class="logo2">
+                <a href="/login" class="login-btn">
+                    <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
+                    Login
                 </a>
             </div>
         </div>
