--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -116,6 +116,7 @@
     transition: background-color 0.3s ease;
     box-sizing: border-box; /* Include padding in size */
     text-decoration: none; /* Prevent underline on links */
+    
 }
 
 
@@ -151,7 +152,7 @@
         <div id="title">
             <div class="image-container">
                 <a href="/" class="image-link">
-                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
                 </a>
             </div>
 
