--- a/templates/option3.html
+++ b/templates/option3.html
@@ -425,7 +425,7 @@ function downloadImage() {
         <div id="title">
             <div class="image-container">
                 <a href="/" class="image-link">
-                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                    <img src="static/tinderAI.png" alt="Image 1" class="logo1">
                 </a>
             </div>
 
