--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -232,21 +232,21 @@
         </div> -->
         <div class="box">
             <a href="/option6" class="box-link">
-                <img src="static/box3.jpg" alt="Option 6" class="box-image">
+                <img src="static/ultra.png" alt="Option 6" class="box-image">
                 <h2>Tinder Photo Ultra</h2>
                 <p>Best Profile Photo with face, age and emotion verification, including AI suggestions for your photo improvement</p>
             </a>
         </div>
         <div class="box">
             <a href="/option5" class="box-link">
-                <img src="static/box3.jpg" alt="Option 5" class="box-image">
+                <img src="static/premium.png" alt="Option 5" class="box-image">
                 <h2>Tinder Photo Premium</h2>
                 <p>Best Profile Photo with face verification</p>
             </a>
         </div>
         <div class="box">
             <a href="/option3" class="box-link">
-                <img src="static/box3.jpg" alt="Option 3" class="box-image">
+                <img src="static/basic.png" alt="Option 3" class="box-image">
                 <h2>Tinder Photo Basic</h2>
                 <p>Choose the best photo for your profile</p>
             </a>
