--- a/templates/option3.html
+++ b/templates/option3.html
@@ -493,7 +493,7 @@ function downloadImage() {
                     -webkit-text-fill-color: transparent; 
                     font-weight: bold; 
                     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);">
-                Transform Your Tinder Profile
+                Transform Your Tinder Profile Basic
             </h1>
 
             <p style="background: linear-gradient(45deg, #ff5733, #f727b8); 
